# research-work-4

./: README.md
research-work/: CMakeLists.txt  Encryptor.h  Kuznechik.cpp  Kuznechik.h  KuznechikAVX512.cpp  KuznechikAVX512.hpp  Magma.cpp  Magma.h  MagmaAVX2.cpp  MagmaAVX2.h  MagmaAVX2.hpp  MagmaAVX512.cpp  MagmaAVX512.h  MagmaAVX512.hpp  MagmaAVX512Reg.cpp  MagmaAVX512Reg.hpp  Makefile  Structures.cpp  Structures.h  main.py  research-work.cpp  research-work.sln  research-work.vcxproj  research-work.vcxproj.filters  speed-tests.cpp  table2X65536.hpp  table4X256.hpp  testData.hpp
research-work/Encryptor/: Encryptor.h
